Continued changing the parties_I_english.yml party names. This is going to take forever :( I havent even started the country names :(((

--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -69,7 +69,7 @@
  POL_radical_constitutionalism_party_long:0 "Śmierć Tyranom Party"
  POL_constitutionalism_party:0 "BBWR"
  ENG_cooperatism_party:0 "Cooperative British Union"
- ENG_radical_constitutionalism_party:0 "Republican Party"
+ ENG_radical_constitutionalism_party:0 "English Democracy Party"
  ENG_ethnic_loyalism_party:0 "Monarchist People's Action"
  ENG_constitutionalism_party_kings_party:0 "King's Party"
  ENG_constitutionalism_party_kings_party_long:0 "The King's Party"
@@ -85,13 +85,13 @@
  JAP_constitutionalism_party_kodoha_long:0 "Kodoha Faction"
  JAP_constitutionalism_party_kodoha:0 "Kodoha Faction"
  USA_cooperatism_party:0 "Cooperative Party of the USA"
- USA_radical_constitutionalism_party:0 "Revolutionary Constitution Party"
+ USA_radical_constitutionalism_party:0 "Revolutionary Constitutional Party"
  USA_republican_party:0 "Traditionalist Party"
  USA_ethnic_loyalism_party:0 "George's Royal Front"
  FRA_cooperatism_party:0 "Parti Cooperatist Francais"
  FRA_radical_constitutionalism_party:0 "Les Jacobins"
  FRA_ethnic_loyalism_party:0 "Parti au Roi"
- SOV_cooperatism_party:0 "Cooperatives United of Russia"
+ SOV_cooperatism_party:0 "United Cooperatives of Russia"
  SOV_radical_constitutionalism_party:0 "Anti-Tsarist Party"
  SOV_ethnic_loyalism_party:0 "Tsarist Action for Russia"
  AUS_cooperatism_party:0 "KPÖ"
@@ -151,7 +151,7 @@
  LIT_cooperatism_party:0 "LKP"
  LIT_cooperatism_party_long:0 "Lietuvos Kooperatyvas Partija"
  LAT_constitutionalism_party:0 "Tautas Sadraudzības partija"
- LAT_ethnic_loyalism_party:0 "German Seperatist Party"
+ LAT_ethnic_loyalism_party:0 "German Separatist Party"
  LAT_radical_constitutionalism_party:0 "LSDSP"
  LAT_radical_constitutionalism_party_long:0 "Latvijas Socialdemokratiska Stradnieku Partija"
  LAT_cooperatism_party:0 "LKP"
@@ -179,13 +179,13 @@
  FIN_radical_constitutionalism_party:0 "SDP"
  FIN_radical_constitutionalism_party_long:0 "Suomen Sosialidemokraattinen Puolue"
  FIN_ethnic_loyalism_party:0 "GSP"
- FIN_ethnic_loyalism_party_long:0 "German Seperatist Party"
+ FIN_ethnic_loyalism_party_long:0 "German Separatist Party"
  FIN_cooperatism_party:0 "SOP"
  FIN_cooperatism_party_long:0 "Suomen Osuuskunta Puolue"
  DEN_radical_constitutionalism_party:0 "Socialdemokratiet"
  DEN_radical_constitutionalism_party_long:0 "Socialdemokratiet"
  DEN_ethnic_loyalism_party:0 "DFP"
- DEN_ethnic_loyalism_party_long:0 "Dansk Familie Parti"
+ DEN_ethnic_loyalism_party_long:0 "Dansk National Familie Parti"
  DEN_cooperatism_party:0 "DNSP"
  DEN_cooperatism_party_long:0 "Dansk National Samarbejdsvillig Parti"
  DEN_constitutionalism_party:0 "Kongeligt Parlament"
@@ -204,8 +204,8 @@
  AST_radical_constitutionalism_party_long:0 "Australian Laborer's Party"
  AST_ethnic_loyalism_party:0 "RIB"
  AST_ethnic_loyalism_party_long:0 "Royal International Brigade"
- AST_cooperatism_party:0 "COA"
- AST_cooperatism_party_long:0 "Cooperates of Australia"
+ AST_cooperatism_party:0 "COAP"
+ AST_cooperatism_party_long:0 "Cooperates of the Australian People"
  MEX_radical_constitutionalism_party:1 "PLCR"
  MEX_radical_constitutionalism_party_long:1 "Partido Liberal Constitucionalista Radical"
  MEX_ethnic_loyalism_party:0 "PADC"
@@ -285,7 +285,7 @@
  JPL_cooperatism_party:0 "YWP"
  JPL_cooperatism_party_long:0 "Yulian Werkers Party"
  JPL_radical_constitutionalism_party:0 "YPR"
- JPL_radical_constitutionalism_party_long:0 "Yuliane Persony Representanty Party"
+ JPL_radical_constitutionalism_party_long:0 "Yulians Persony Representanty Party"
  JPL_ethnic_loyalism_party:0 "KVW"
  JPL_ethnic_loyalism_party_long:0 "Kinderen Van Wilhelm"
  NZL_constitutionalism_party:0 "National"
@@ -329,63 +329,75 @@
  RAJ_constitutionalism_party:0 "EAP"
  RAJ_constitutionalism_party_long:0 "English Amendment Party"
  RAJ_cooperatism_party:0 "CPI"
- RAJ_cooperatism_party_long:0 "Communist Party of India"
+ RAJ_cooperatism_party_long:0 "Cooperative Party of India"
  RAJ_radical_constitutionalism_party:0 "IIM"
  RAJ_radical_constitutionalism_party_long:0 "Indian Independence Movement"
- RAJ_ethnic_loyalism_party:0 "AIHA"
- RAJ_ethnic_loyalism_party_long:0 "All-India Hindu Assembly"
- PER_cooperatism_party:0 "Tudeh Party"
- PER_cooperatism_party_long:0 "Tudeh Party"
- PER_constitutionalism_party:0 "Pahlavi Dynasty"
- COL_cooperatism_party:0 "PCC"
- COL_cooperatism_party_long:0 "Partido Comunista Colombiano"
+ RAJ_ethnic_loyalism_party:0 "ITP"
+ RAJ_ethnic_loyalism_party_long:0 "Indian Traditionalist Party"
+ PER_cooperatism_party:0 "Iranian Cooperative Assembly"
+ PER_cooperatism_party_long:0 "ICA"
+ PER_constitutionalism_party:0 "Pahlavi Monarchist Democracy"
+ COL_cooperatism_party:0 "COC"
+ COL_cooperatism_party_long:0 "Cooperativas de Colombia"
  COL_radical_constitutionalism_party:0 "PLC"
- COL_radical_constitutionalism_party_long:0 "Partido Liberal Colombiano"
+ COL_radical_constitutionalism_party_long:0 "Partido Demócrata Revolucionario"
  COL_constitutionalism_party:0 "Conservador"
- COL_constitutionalism_party_long:0 "Partido Conservador Colombiano"
+ COL_constitutionalism_party_long:0 "Partido Real Colombiano"
+ COL_ethnic_loyalism_party:0 "RSC"
+ COL_ethnic_loyalism_party_long:0 "Reales Sindicatos de Colombia"
  CZE_cooperatism_party:0 "KSC"
- CZE_cooperatism_party_long:0 "Komunistická strana Ceskoslovenska"
- CZE_radical_constitutionalism_party:0 "CSNS"
- CZE_radical_constitutionalism_party_long:0 "Ceská strana národne sociální"
- CZE_ethnic_loyalism_party:0 "NOF"
- CZE_ethnic_loyalism_party_long:0 "Národní obec fašistická"
- CHL_ethnic_loyalism_party:0 "VPS"
- CHL_ethnic_loyalism_party_long:0 "Vanguardia Popular Socialista"
- CHL_radical_constitutionalism_party:0 "Partido Liberal"
- CHL_cooperatism_party:0 "PCCh"
- CHL_cooperatism_party_long:0 "Partido Comunista de Chile"
- ETH_constitutionalism_party:0 "Solomonic Dynasty"
- ETH_radical_constitutionalism_party:0 "Woyane rebellion"
- ALB_constitutionalism_party:0 "House of Zogu"
- ALB_constitutionalism_party_long:0 "House of Zogu"
- ALB_ethnic_loyalism_party:0 "PFSh"
- ALB_ethnic_loyalism_party_long:0 "Partia Fashiste e Shqipërisë"
- ALB_radical_constitutionalism_party:0 "Pavarur"
- ALB_radical_constitutionalism_party_long:0 "Pavarur"
- ALB_cooperatism_party:0 "PPSH"
- ALB_cooperatism_party_long:0 "Partia e Punës e Shqipërisë"
- BOL_radical_constitutionalism_party:0 "PL"
- BOL_radical_constitutionalism_party_long:0 "Partido Liberal"
+ CZE_cooperatism_party_long:0 "Lidová Družstva České Republiky"
+ CZE_radical_constitutionalism_party:0 "RAMC"
+ CZE_radical_constitutionalism_party_long:0 "Radikální Anti-Monarchové z Česka"
+ CZE_ethnic_loyalism_party:0 "KDC"
+ CZE_ethnic_loyalism_party_long:0 "Královské Děti Česka"
+ CHL_ethnic_loyalism_party:0 "VR"
+ CHL_ethnic_loyalism_party_long:0 "Vanguardia de Real"
+ CHL_radical_constitutionalism_party:0 "Partido Liberal Revolucionario"
+ CHL_cooperatism_party:0 "Cooperatistas"
+ CHL_cooperatism_party_long:0 "Cooperatistas"
+ ETH_constitutionalism_party:0 "RRF"
+ ETH_constitutionalism_party_long:0 "Rastafarian Mobilized Front"
+ ETH_radical_constitutionalism_party:0 "People's Consitutional Movement"
+ ETH_ethnic_loyalism_party:0 "Selassie's Lions"
+ ALB_constitutionalism_party:0 "PKS"
+ ALB_constitutionalism_party_long:0 "Partia Koncesionare e Shqipërisë"
+ ALB_ethnic_loyalism_party:0 "GM"
+ ALB_ethnic_loyalism_party_long:0 "Garda Mbretërore"
+ ALB_radical_constitutionalism_party:0 "SPL"
+ ALB_radical_constitutionalism_party_long:0 "Shqiptarët për Partinë e Lirisë"
+ ALB_cooperatism_party:0 "KPB"
+ ALB_cooperatism_party_long:0 "Këshilli Popullor Bashkëpunues"
+ BOL_radical_constitutionalism_party:0 "PLRB"
+ BOL_radical_constitutionalism_party_long:0 "Partido Liberal Revolucionario de Bolivia"
  BOL_ethnic_loyalism_party:0 "FSB"
- BOL_ethnic_loyalism_party_long:0 "Falange Socialista Boliviana"
- BOL_constitutionalism_party:0 "QG"
- BOL_constitutionalism_party_long:0 "Quintanilla government"
+ BOL_ethnic_loyalism_party_long:0 "Falange Real Boliviana"
+ BOL_constitutionalism_party:0 "PI"
+ BOL_constitutionalism_party_long:0 "Partido Intermediario"
+ BOL_cooperatism_party:0 "FCC"
+ BOL_cooperatism_party_long:0 "Frente Cooperativo Combinado"
  NIC_radical_constitutionalism_party:0 "PLN"
- NIC_radical_constitutionalism_party_long:0 "Partido Liberal Nacionalista"
+ NIC_radical_constitutionalism_party_long:0 "Partido para Liberation Nacional"
+ NIC_cooperatism_party:0 ""
+ NIC_cooperatism_party_long:0 ""
  COS_radical_constitutionalism_party:0 "PR"
- COS_radical_constitutionalism_party_long:0 "Partido Republicano"
- COS_cooperatism_party:0 "PVP"
- COS_cooperatism_party_long:0 "Partido Vanguardia Popular"
- ELS_ethnic_loyalism_party:0 "Pro-Patria"
- ELS_ethnic_loyalism_party_long:0 "Partido Nacional 'Pro-Patria'"
- GUA_radical_constitutionalism_party:0 "PLP"
- GUA_radical_constitutionalism_party_long:0 "Progressive Liberal Party"
+ COS_radical_constitutionalism_party_long:0 "Partido Republicano Revolucionario"
+ COS_cooperatism_party:0 "PVT"
+ COS_cooperatism_party_long:0 "Partido Vanguardia de Trabajadores"
+ ELS_ethnic_loyalism_party:0 "PFR"
+ ELS_ethnic_loyalism_party_long:0 "Partido Frente Real"
+ GUA_radical_constitutionalism_party:0 "CP"
+ GUA_radical_constitutionalism_party_long:0 "Constitutional Progressivists"
  SIA_constitutionalism_party:0 "Khana Ratsadon"
  SIA_constitutionalism_party_long:0 "Khana Ratsadon"
+ SIA_cooperatism_party:0 "SHS"
+ SIA_cooperatism_party_long:0 "S̄h̄krṇ̒ Hæ̀ng Syām"
+ SIA_ethnic_loyalism_party:0 "Mongkut's Brigade"
+ SIA_ethnic_loyalism_party_long:0 "Mongkut's Citizen Brigade"
  URG_radical_constitutionalism_party:0 "Colorado"
  URG_radical_constitutionalism_party_long:0 "Partido Colorado"
  URG_cooperatism_party:0 "PCU"
- URG_cooperatism_party_long:0 "Partido Comunista del Uruguay"
+ URG_cooperatism_party_long:0 "Partido Cooperatista del Uruguay"
  VEN_ethnic_loyalism_party:0 "Consejo de Ministros"
  VEN_ethnic_loyalism_party_long:0 "Consejo de Ministros"
  VEN_constitutionalism_party:0 "AD"
