changed more party names; fucking kill me please

--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -394,6 +394,8 @@
  SIA_cooperatism_party_long:0 "S̄h̄krṇ̒ Hæ̀ng Syām"
  SIA_ethnic_loyalism_party:0 "Mongkut's Brigade"
  SIA_ethnic_loyalism_party_long:0 "Mongkut's Citizen Brigade"
+ SIA_radical_constitutionalism_party:0 "PDS"
+ SIA_radical_constitutionalism_party_long:0 "Party for Democracy in Siam"
  URG_radical_constitutionalism_party:0 "Colorado"
  URG_radical_constitutionalism_party_long:0 "Partido Colorado"
  URG_cooperatism_party:0 "PCU"
