Tweaked the Absolutism AI to form/join only 'communist' factions. Also changed more party names.

--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -86,7 +86,7 @@
  JAP_constitutionalism_party_kodoha:0 "Kodoha Faction"
  USA_cooperatism_party:0 "Cooperative Party of the USA"
  USA_radical_constitutionalism_party:0 "Revolutionary Constitutional Party"
- USA_republican_party:0 "Traditionalist Party"
+ USA_constitutionalist_party:0 "Traditionalist Party"
  USA_ethnic_loyalism_party:0 "George's Royal Front"
  FRA_cooperatism_party:0 "Parti Cooperatist Francais"
  FRA_radical_constitutionalism_party:0 "Les Jacobins"
@@ -400,31 +400,35 @@
  URG_radical_constitutionalism_party_long:0 "Partido Colorado"
  URG_cooperatism_party:0 "PCU"
  URG_cooperatism_party_long:0 "Partido Cooperatista del Uruguay"
- VEN_ethnic_loyalism_party:0 "Consejo de Ministros"
- VEN_ethnic_loyalism_party_long:0 "Consejo de Ministros"
- VEN_constitutionalism_party:0 "AD"
- VEN_constitutionalism_party_long:0 "Acción Democrática"
- VEN_radical_constitutionalism_party:0 "Copei"
- VEN_radical_constitutionalism_party_long:0 "Copei"
+ VEN_ethnic_loyalism_party:0 "Brigada de Ministros"
+ VEN_ethnic_loyalism_party_long:0 "Brigada de Ministros"
+ VEN_constitutionalism_party:0 "GIV"
+ VEN_constitutionalism_party_long:0 "Gobierno Intermedio de Venezuela"
+ VEN_radical_constitutionalism_party:0 "AD"
+ VEN_radical_constitutionalism_party_long:0 "Acción Democrática"
  VEN_cooperatism_party:0 "PCV"
- VEN_cooperatism_party_long:0 "Partido Comunista de Venezuela"
- PRU_ethnic_loyalism_party:0 "Constituent Assembly"
- PRU_ethnic_loyalism_party_long:0 "Constituent Assembly"
+ VEN_cooperatism_party_long:0 "Partido Cooperativa de Venezuela"
+ PRU_ethnic_loyalism_party:0 "PRP"
+ PRU_ethnic_loyalism_party_long:0 "Partido de la Realeza Peruana"
  PRU_cooperatism_party:0 "PCP"
- PRU_cooperatism_party_long:0 "Partido Comunista del Perú"
- IRE_radical_constitutionalism_party:0 "Fianna Fáil"
- IRE_radical_constitutionalism_party_long:0 "Fianna Fáil, The Republican Party"
- IRE_ethnic_loyalism_party:0 "PNC"
- IRE_ethnic_loyalism_party_long:0 "Páirtí Náisiúnta Corparáidíoch"
- IRE_cooperatism_party:0 "CPI"
- IRE_cooperatism_party_long:0 "Páirtí Cumannach na hÉireann"
- IRE_constitutionalism_party:0 "Lucht Oibre"
- IRE_constitutionalism_party_long:0 "Páirtí an Lucht Oibre"
- AFG_constitutionalism_party:0 "Barakzai"
- AFG_constitutionalism_party_long:0 "Barakzai royal family"
+ PRU_cooperatism_party_long:0 "Partido Cooperatista del Perú"
+ IRE_radical_constitutionalism_party:0 "APE"
+ IRE_radical_constitutionalism_party_long:0 "Arm Poblachtach na hÉireann"
+ IRE_ethnic_loyalism_party:0 "TRS"
+ IRE_ethnic_loyalism_party_long:0 "Tosaigh Rí Seoirse"
+ IRE_cooperatism_party:0 "PCE"
+ IRE_cooperatism_party_long:0 "Páirtí Chomharchumann na hÉireann"
+ IRE_constitutionalism_party:0 "CAS"
+ IRE_constitutionalism_party_long:0 "Cóisir Aontacht Shasana"
+ AFG_constitutionalism_party:0 "DRA"
+ AFG_constitutionalism_party_long:0 "Democratic Royalty Party"
+ AFG_radical_constitutionalist_party:0 "ARF"
+ AFG_radical_constitutionalist_party_long:0 "Afghani Revolutionary Front"
+ AFG_cooperatism_party:0 "AUCS"
+ AFG_cooperatism_party_long:0 "Afghani Union of Cooperate States"
  LUX_radical_constitutionalism_party:0 "Rietspartei"
- LUX_cooperatism_party:0 "KPL"
- LUX_cooperatism_party_long:0 "Kommunistesch Partei Lëtzebuerg"
+ LUX_cooperatism_party:0 "KvL"
+ LUX_cooperatism_party_long:0 "Kooperativen vu Lëtzebuerg"
  LUX_ethnic_loyalism_party:0 "PNI"
  LUX_ethnic_loyalism_party_long:0 "Onofhängeg Nationalpartei"
  BHU_constitutionalism_party:0 "Wangchuk Dynasty"
